# ImageProcessingLib

./: CMakeLists.txt  README.md  main.cpp
include/: Mat.hpp  imgcodec.hpp  loadsave.hpp  transform.hpp  types.hpp
include/imgcodec/: HuffmanTree.hpp  IDecoder.hpp  IEncoder.hpp  JPEGDecoder.hpp  MCU.hpp  PGMEncoder.hpp  PPMEncoder.hpp  markers.hpp  utils.hpp
src/: Mat.cpp  loadsave.cpp  transform.cpp
src/imgcodec/: HuffmanTree.cpp  JPEGDecode.cpp  JPEGDecoder.cpp  MCU.cpp  PGMEncoder.cpp  PPMEncoder.cpp  utils.cpp
test/: CMakeLists.txt  test_jpeg_decoder.cpp
